B&L QA/objects/RecordTypeLookup__c.object
<CustomObject>
    <fields>
        <fullName>AssignToProfile__c</fullName>
        <label>Assign To Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAL: VTM Sales Rep User</fullName>
                </value>
                <value>
                    <fullName>NAL: ITM Sales Rep User</fullName>
                </value>
                <value>
                    <fullName>NAL: Canada Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Eat and Learn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CANVC</fullName>
                </value>
                <value>
                    <fullName>DASRX German Visit Report</fullName>
                </value>
                <value>
                    <fullName>DASRX Swiss Visit Report</fullName>
                </value>
                <value>
                    <fullName>ECS</fullName>
                </value>
                <value>
                    <fullName>USASL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpdateField__c</fullName>
        <label>UpdateField</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Record Type Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RecordType__c</columns>
        <columns>EventType__c</columns>
        <columns>AssignToProfile__c</columns>
        <columns>UpdateField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>AssignToProfile__c</columns>
        <columns>EventType__c</columns>
        <columns>RecordType__c</columns>
        <columns>UpdateField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Record Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RecordTypeLookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>